html content update

--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -2,3 +2,7 @@
 $primary: #2f87fd; //Skyblue
 $accent: #78aef8; //Paisley
 $block: #1f2329; //Cobalt 
+
+.banner{
+    background: url(../images/paul-bence-395888.png);
+}
