--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,3 +1,13 @@
+//COLORS
+$primary: #2f87fd; //Skyblue
+$accent: #78aef8; //Paisley
+$block: #1f2329; //Cobalt 
+$bg-color: #f5f5f5; //Offwhite
+
+//TEXT
+$main-font-color: #272626; //Black
+$p-color: #747474; //DarkGrey
+
 @import "partials/_setup.scss";
 
 @import "partials/_typography.scss";
@@ -8,10 +18,10 @@
 @import "partials/_button.scss";
 
 img{
-    width:100%;
+    max-width:100%;
 }
 .wrapper{
-    max-width: 60%;
+    max-width: 1170px;
     margin: 0 auto;
 }
 ul{
@@ -22,7 +32,6 @@ ul{
         padding: 0;
     }
 }
-
-h1 {
-    background: red;
+a{
+    text-decoration: none;
 }
