--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -1,26 +1,66 @@
-
-.top-nav{
-    background: $bg_color;
+.flex{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 }
-.top-nav,
+.top-nav .wrapper,
+.accounts,
+.account-deets,
 .company-info,
+.contact-info-phone,
+.contact-info-mail,
 .page-nav .wrapper,
 .page-nav-menu,
 .page-nav-icons,
 .page-nav-social{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    @extend .flex;
 }
-.company-info-img{
-        width: 30%;
+.top-nav{
+    background: $bg_color;
 }
-.company-info-item{
-    display: flex;
-    flex-direction: row;
+.contact-info{
+    img{
+        width: 18%;
+    }
+    li{
+        flex-basis: 50%;
+    }
+}
+.accounts{
+    flex-basis: 40%;
+    .translate-icon{
+        width: 10%;
+    }
+}
+.company-info{
+    .company-info-img{
+            width: 25%;
+    }
+    .company-info-info span{
+        color: $primary;
+    }
+    .company-info-item{
+        @extend .flex;
+    }
+    button{
+        text-transform: uppercase;
+        background: none;
+        border: 2px solid $primary;
+        align-self: center;
+    }
 }
 .page-nav{
     background: $primary;
+    .page-nav-menu{
+        flex-basis: 65%;
+    }
+    .page-nav-icons{
+        flex-basis: 5%;
+    }
+    .page-nav-social{
+        flex-basis: 15%;
+    }
     a{
         color: white;
     }
@@ -29,4 +69,14 @@
     background: url(../images/photos/paul-bence-395888.png) no-repeat;
     background-size: contain;
     height: 650px;
+}
+select{
+    background: none;
+    width: 80px;
+    border: none;
+    appearance: none;
+    background-image: url(https://image.flaticon.com/icons/svg/25/25243.svg);
+    background-repeat: no-repeat;
+    background-size: 10%;
+    background-position: 95% bottom;
 }
