--- a/styles/style.css
+++ b/styles/style.css
@@ -135,15 +135,25 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
 h1, h2, h3, h4, h5, p {
   margin: 0; }
 
-.top-nav {
-  background: #f5f5f5; }
+h2 {
+  font-size: 50px;
+  font-family: PlayfairDisplay;
+  color: rgba(39, 39, 39, 0.7);
+  font-weight: 700;
+  line-height: 58px;
+  /* Approximation due to font substitution */
+  text-align: left; }
 
-.top-nav,
+.flex, .top-nav .wrapper,
+.accounts,
+.account-deets,
 .company-info,
+.contact-info-phone,
+.contact-info-mail,
 .page-nav .wrapper,
 .page-nav-menu,
 .page-nav-icons,
-.page-nav-social {
+.page-nav-social, .company-info .company-info-item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -151,24 +161,53 @@ h1, h2, h3, h4, h5, p {
   -webkit-box-direction: normal;
   -ms-flex-direction: row;
   flex-direction: row;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between; }
 
-.company-info-img {
-  width: 30%; }
+.top-nav {
+  background: #f5f5f5; }
 
-.company-info-item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row; }
+.contact-info img {
+  width: 18%; }
+
+.contact-info li {
+  -ms-flex-preferred-size: 50%;
+  flex-basis: 50%; }
+
+.accounts {
+  -ms-flex-preferred-size: 40%;
+  flex-basis: 40%; }
+  .accounts .translate-icon {
+    width: 10%; }
+
+.company-info .company-info-img {
+  width: 25%; }
+
+.company-info .company-info-info span {
+  color: #2f87fd; }
+
+.company-info button {
+  text-transform: uppercase;
+  background: none;
+  border: 2px solid #2f87fd;
+  -ms-flex-item-align: center;
+  align-self: center; }
 
 .page-nav {
   background: #2f87fd; }
+  .page-nav .page-nav-menu {
+    -ms-flex-preferred-size: 65%;
+    flex-basis: 65%; }
+  .page-nav .page-nav-icons {
+    -ms-flex-preferred-size: 5%;
+    flex-basis: 5%; }
+  .page-nav .page-nav-social {
+    -ms-flex-preferred-size: 15%;
+    flex-basis: 15%; }
   .page-nav a {
     color: white; }
 
@@ -176,6 +215,18 @@ h1, h2, h3, h4, h5, p {
   background: url(../images/photos/paul-bence-395888.png) no-repeat;
   background-size: contain;
   height: 650px; }
+
+select {
+  background: none;
+  width: 80px;
+  border: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-image: url(https://image.flaticon.com/icons/svg/25/25243.svg);
+  background-repeat: no-repeat;
+  background-size: 10%;
+  background-position: 95% bottom; }
 
 .third {
   width: 33.33%; }
@@ -199,7 +250,9 @@ footer {
   background: #1f2329; }
 
 button {
-  padding: 10px; }
+  padding: 10px;
+  background: #2f87fd;
+  border: none; }
 
 img {
   max-width: 100%; }
@@ -219,3 +272,6 @@ ul {
 
 a {
   text-decoration: none; }
+
+img {
+  display: inline-block; }
