--- a/styles/style.scss
+++ b/styles/style.scss
@@ -7,10 +7,15 @@ $bg-color: #f5f5f5; //Offwhite
 //TEXT
 $main-font-color: #272626; //Black
 $p-color: #747474; //DarkGrey
+$serif-heading: PlayfairDisplay;
+$sans-highlights: Poppins;
+$sans-p:Source Sans Pro;
 
 @import "partials/_setup.scss";
 
+@import "partials/mixins";
 @import "partials/_typography.scss";
+
 
 @import "partials/_header.scss";
 @import "partials/_main.scss";
@@ -34,4 +39,7 @@ ul{
 }
 a{
     text-decoration: none;
+}
+img{
+    display: inline-block;
 }
