--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -1,47 +1,60 @@
-.flex{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-.top-nav .wrapper,
-.accounts,
-.account-deets,
-.company-info,
-.contact-info-phone,
-.contact-info-mail,
-.page-nav .wrapper,
-.page-nav-menu,
-.page-nav-icons,
-.page-nav-social{
-    @extend .flex;
-}
 .top-nav{
     background: $bg_color;
+    .wrapper{
+        @extend .flex;
+    }
 }
 .contact-info{
-    img{
-        width: 18%;
+    @extend .flex;
+    .contact-info-phone,
+    .contact-info-mail{
+        @extend .flex;
+        align-items: center;
     }
-    li{
-        flex-basis: 50%;
+     .contact-info-img{
+        width: 20%;
     }
 }
 .accounts{
+    @extend .flex;
     flex-basis: 40%;
     .translate-icon{
-        width: 10%;
+        width: 20px;
+    }
+    .translate{
+        @extend .flex;
+    }
+    .account-items{
+        @extend .flex;
     }
 }
+select{
+    background: none;
+    width: 80px;
+    border: none;
+    appearance: none;
+    background-image: url(https://image.flaticon.com/icons/svg/25/25243.svg);
+    background-repeat: no-repeat;
+    background-size: 10%;
+    background-position: 95% bottom;
+}
 .company-info{
+    .wrapper{
+        @extend .flex;
+    }
     .company-info-img{
-            width: 25%;
+            width: 30px;
     }
     .company-info-info span{
         color: $primary;
     }
+    .company-info-logo,
     .company-info-item{
         @extend .flex;
+        .company-info-office,
+        .company-info-open{
+            @extend .flex;
+        }
     }
     button{
         text-transform: uppercase;
@@ -51,7 +64,17 @@
     }
 }
 .page-nav{
-    background: $primary;
+    .wrapper{
+        @extend .flex;
+        background: $primary;
+    }
+    ul{
+        @extend .flex;
+        justify-content: space-around;
+        li{
+            @extend .flex;
+        }
+    }
     .page-nav-menu{
         flex-basis: 65%;
     }
@@ -67,16 +90,6 @@
 }
 .banner{
     background: url(../images/photos/paul-bence-395888.png) no-repeat;
-    background-size: contain;
-    height: 650px;
-}
-select{
-    background: none;
-    width: 80px;
-    border: none;
-    appearance: none;
-    background-image: url(https://image.flaticon.com/icons/svg/25/25243.svg);
-    background-repeat: no-repeat;
-    background-size: 10%;
-    background-position: 95% bottom;
+    // background-size: contain;
+    // height: 650px;
 }
