--- a/styles/partials/_button.scss
+++ b/styles/partials/_button.scss
@@ -2,4 +2,10 @@ button{
     padding: 10px;
     background: $primary;
     border: none;
+    color: white;
+    text-transform: capitalize;
+}
+.transparent{
+    background: none;
+    color: $primary;
 }
